Collected some errors

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 <body>
     <header class="d-flex justify-content-spacebtn align-item-center">
         <div class="h_left d-flex justify-content-spacebtn">
-            <a href="index.html"><img src="images/logo.jpg" alt="logo" /></a>
+            <a href="index.html"><img src="Images/logo.jpg" alt="logo" /></a>
             <a href="index.html">Home</a>
             <a href="index.html">About Us</a>
             <a href="blog.html">Our Blog</a>
