--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="images/logo.jpg" type="image/jpg" />
+    <link rel="shortcut icon" href="Images/logo.jpg" type="image/jpg" />
     <link rel="stylesheet" href="css/signup.css" />
     <title>Triple R Revolution</title>
 </head>
