--- a/account.html
+++ b/account.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="images/logo.jpg" type="image/jpg" />
+    <link rel="shortcut icon" href="Images/logo.jpg" type="image/jpg" />
     <link rel="stylesheet" href="css/acount.css" />
     <title>Triple R Revolution</title>
 </head>
@@ -13,7 +13,7 @@
 <body>
     <header class="d-flex justify-content-spacebtn align-item-center">
         <div class="h_left d-flex justify-content-spacebtn">
-            <a href="#home"><img src="images/logo.jpg" alt="logo" /></a>
+            <a href="#home"><img src="Images/logo.jpg" alt="logo" /></a>
             <a href="index.html">Home</a>
             <a href="index.html">About Us</a>
             <a href="blog.html">Our Blog</a>
